Fix the CSS on the project/site line of the workbook archive summary.  This change makes values that are too long to display use ellipsis ... instead of wrap.
re: PD-5219

--- a/app/less/pages.less
+++ b/app/less/pages.less
@@ -166,6 +166,9 @@ label[for*="s3-"], label[for*="gcs-"] {
 /* workbooks */
 .workbook-page .item .summary div.col2 div {
     text-align: right;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 #workbook-list ul {
     padding-left: 0;
